summative.moria.Moria.scala.error
Compilation error:
Moria:38: error: leave is already defined as variable leave
def leave() = {
    ^Moria:40: error: recursive method leave needs result type
  leave = true
  ^